[project]
name = "dbt-package-loom"
version = "0.1.0"
description = "CLI tool that injects ephemeral dbt package stubs from upstream project manifests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dbt-cloud = []
paradime = ["paradime-io"]

[project.scripts]
dbt-package-loom = "dbt_package_loom.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]
